// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log output Group: logs Test: logs: log 1`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[49]:0x16b1)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3018)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 2`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3616,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[53]:0x1764)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x301c)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 3`] = `
HostValue {
  "isManaged": true,
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[60]:0x1926)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3020)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 4`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": Array [
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3472,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[64]:0x1a59)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3043)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 5`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3520,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[72]:0x2640)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3054)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 6`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[76]:0x26f3)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x305e)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 7`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[80]:0x27a2)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3065)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 8`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[84]:0x2851)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x306e)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 9`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[88]:0x2900)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3072)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 10`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[92]:0x29af)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3076)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 11`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2a5e)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x307a)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 12`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2a5e)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x307e)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 13`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3344,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[103]:0x2c0a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3082)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 14`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3408,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[108]:0x2d5d)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x3086)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 15`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[111]:0x2e17)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x308a)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "assembly/jest-log/IdFunction",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 16`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x30be)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 17`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": Array [
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 1408,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "a",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 1440,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "b",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 1472,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "c",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3584,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/UnmanagedClass> (wasm-function[116]:0x2f8d)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[120]:0x30c8)
    at ../assembly/assembly/internal/call/__call (wasm-function[136]:0x3312)",
  "type": 1,
  "typeId": 0,
  "typeName": "UnmanagedClass",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3776,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3776,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3776,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: stringify 1`] = `"  string: \\"Hello world!\\""`;

exports[`log output Group: logs Test: logs: stringify 2`] = `"  number: 42"`;

exports[`log output Group: logs Test: logs: stringify 3`] = `"  class: <Vec3>null"`;

exports[`log output Group: logs Test: logs: stringify 4`] = `
"  class: Vec3 {
      string: x: number: 1.0,
      string: y: number: 2.0,
      string: z: number: 3.0
  }"
`;

exports[`log output Group: logs Test: logs: stringify 5`] = `"  class: Array<i32> [number: 1, number: 2, number: 3, ]"`;

exports[`log output Group: logs Test: logs: stringify 6`] = `"  number: 9999999999999 keyword: as class: i64"`;

exports[`log output Group: logs Test: logs: stringify 7`] = `"  number: 1234567 keyword: as class: u32"`;

exports[`log output Group: logs Test: logs: stringify 8`] = `"  number: 999999999999 keyword: as class: u64"`;

exports[`log output Group: logs Test: logs: stringify 9`] = `"  number: -1 keyword: as class: i8"`;

exports[`log output Group: logs Test: logs: stringify 10`] = `"  number: -1 keyword: as class: i16"`;

exports[`log output Group: logs Test: logs: stringify 11`] = `"  keyword: true"`;

exports[`log output Group: logs Test: logs: stringify 12`] = `"  keyword: false"`;

exports[`log output Group: logs Test: logs: stringify 13`] = `"  class: Uint8Array [number: 0, number: 1, number: 2, ]"`;

exports[`log output Group: logs Test: logs: stringify 14`] = `"  class: Int8Array [number: -1, number: -2, number: -3, ]"`;

exports[`log output Group: logs Test: logs: stringify 15`] = `"  class: [Function 1: assembly/jest-log/IdFunction]"`;

exports[`log output Group: logs Test: logs: stringify 16`] = `"  string: \\"trace: The thing! 1, 2, 3, 4, 5\\""`;

exports[`log output Group: logs Test: logs: stringify 17`] = `
"  class: UnmanagedClass {
      string: a: number: 1.0,
      string: b: number: 2.0,
      string: c: number: 3.0
  }"
`;

exports[`log output Group: logs: log 1`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[49]:0x16b1)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3103)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs: log 2`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3616,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[53]:0x1764)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3107)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs: log 3`] = `
HostValue {
  "isManaged": true,
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[60]:0x1926)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x310b)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 4`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": Array [
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isManaged": true,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3472,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[64]:0x1a59)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x312e)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3664,
      "signed": true,
      "size": 8,
      "stack": "",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 5`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3520,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[72]:0x2640)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x313f)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 4,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 6`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[76]:0x26f3)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3149)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 7`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[80]:0x27a2)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3150)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs: log 8`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[84]:0x2851)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3159)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 9`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[88]:0x2900)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x315d)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 10`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[92]:0x29af)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3161)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 11`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2a5e)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3165)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 1,
  "values": null,
}
`;

exports[`log output Group: logs: log 12`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3728,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[96]:0x2a5e)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3169)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 13`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3344,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[103]:0x2c0a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x316d)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": false,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 14`] = `
HostValue {
  "isManaged": true,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3408,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[108]:0x2d5d)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3171)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isManaged": false,
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3728,
      "signed": true,
      "size": 1,
      "stack": "",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 15`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[48]:0x1683)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[111]:0x2e17)
    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x3175)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "assembly/jest-log/IdFunction",
  "values": null,
}
`;

exports[`log output Group: logs: log 16`] = `
HostValue {
  "isManaged": false,
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0 (wasm-function[123]:0x31a9)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[125]:0x31e0)
    at start:assembly/jest-log (wasm-function[126]:0x3231)
    at ~start (wasm-function[140]:0x3339)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs: todo 1`] = `"one"`;

exports[`log output Group: logs: todo 2`] = `"two"`;

exports[`log output Group: logs: todo 3`] = `"three"`;
